# RAG-chatbot

./: README.md  env.sample  pyproject.toml
apps/: chat.py  config.py
apps/pages/: 1_📄_Upload_Documents.py  2_🌐_Manage_URLs.py
apps/services/: ai_service.py  document_manager.py  vector_db_manager.py
apps/utils/: logger.py
